# rin.rocks

./: .envrc.example  .eslintignore  .gitignore  .merlin  .yarnrc.yml  LICENSE  README.md  bsconfig.json  config.mjs  devShell.nix  favicons-compiled-v0.0.5.tgz  favicons.config.json  flake.nix  gatsby-config.js  graphql_schema.json  next.config.mjs  nginx.conf  package-lock.json  package.json  rin_rocks.ml  yarn-project.nix
.github/workflows/: ci.yml
apps/backend/: app.re  default.nix  docker.nix  dune  dune-project  rin_rocks.ml  rin_rocks.opam
apps/frontend/: .yarnrc.yml  default.nix  next.config.mjs  package.json  themes.mjs  yarn-project.nix
components/: index.js  meta-tags.js
content/posts/: transform-rin-rocks-dari-gatsby-ke-next.mdx
lib/bs/: .bsbuild  .bsdeps  .ninja_log  build.ninja  install.ninja
lib/bs/src/: Content.ast  (+2 more)
nix/: default.nix  devshell.nix  yarn-project.nix
nix/backend/: default.nix
nix/docker/: default.nix
nix/frontend/: default.nix
notes/: Skeptisme data difrontend.norg  graphql.norg  index.norg  menulis_ulang_jwt.norg  tentang_neorg.norg
notes/ReScript/: index.norg  let_binding.norg
notes/Reasik/: index.norg  pengantar.norg
overlay/: default.nix  ppx_pipe_first.nix  server-reason-react.nix
pages/: _app.js  index.js  uses.mdx
pages/api/: invitations.js  sponsors.js
pages/plan/: 2023.md
pages/posts/: [slug].js  index.js
patches/: mdx-mermaid+1.3.2.patch
re/: Bio.bs.js  Bio.re  Blog.bs.js  Blog.re  Header.bs.js  Post.bs.js  Post.re
src/: index.js
src/gatsby-plugin-theme-ui/: index.js
static/: robots.txt
(+31 files in other folders)
