(executable
 (name rin_rocks)
 (libraries dream server-reason-react.react server-reason-react.reactDom
   server-reason-react.js)
 (public_name rin_rocks)
 (preprocess
  (pps server-reason-react.ppx server-reason-react.browser_ppx lwt_ppx)))

(rule
 (target assets.ml)
 (deps
  (source_tree assets))
 (action
  (with-stdout-to
   %{null}
   (run ocaml-crunch -m plain assets -o %{target}))))
